--- a/assests/css/scss/_showCase-Card.scss
+++ b/assests/css/scss/_showCase-Card.scss
@@ -32,6 +32,7 @@
     justify-items: center;
     align-items: center;
     margin: -4vh -8vh 0;
+    transition: all 0.25s ease-out 0.25ms;
 
     img {
       max-width: 100%;
