--- a/assests/css/scss/_layout/_header.scss
+++ b/assests/css/scss/_layout/_header.scss
@@ -27,10 +27,12 @@
     right: 0;
     height: 10vh;
     width: 100%;
+    transition: all 0.25s ease-out 0.25ms;
 
     @media screen and (min-width: 1080px) {
-      padding: 0 4vw 0 6vw;
+      padding: 0 12vw 0 15vw;
       flex-direction: row;
+
     }
 
     svg {
@@ -43,9 +45,11 @@
       align-self: center;
       z-index: 2;
       transform: scale(1.35);
+      transition: all 0.25s ease-out 0.25ms;
 
       @media screen and (min-width: 1080px) {
         margin-left: 3vw;
+
       }
 
       small {
@@ -67,11 +71,16 @@
       transition: none;
       width: unset;
 
+      @media screen and (min-width: 1080px) {
+        padding: 0 4vw 0 5vw;
+
+      }
+
       .banner-title {
         margin-left: 0.75rem;
         align-self: start;
         transform: scale(1);
-
+        transition: all 0.25s ease-out 0.25ms;
         small {
           display: none;
         }
@@ -329,9 +338,4 @@
     transition: all 0.5s linear 0.5s;
   }
 
-}
-
-header1,
-.banner1 {
-  background-color: transparent !important;
 }
